--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,7 +7,7 @@
   </li>
 </ul>
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!--app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
 <div *ngIf="selectedHero">
 
@@ -19,4 +19,4 @@
     </label>
   </div>
 
-</div>
+</div-->
